facet-macros-emit/tests/snapshots/r#mod__codegen__struct_repr_c.snap
---
source: facet-macros-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[repr(C)]\n        struct Blah {\n            foo: u32,\n            bar: String,\n        }\n        \"#)"
---
#[used]
static BLAH_SHAPE: &'static ::facet::Shape = <Blah as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Blah {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("foo")
                    .shape(|| ::facet::shape_of(&|s: &Blah| &s.foo))
                    .offset(::core::mem::offset_of!(Blah, foo))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [] })
                    .build(),
                ::facet::Field::builder()
                    .name("bar")
                    .shape(|| ::facet::shape_of(&|s: &Blah| &s.bar))
                    .offset(::core::mem::offset_of!(Blah, bar))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [] })
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "Blah"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::StructDef::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
